--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,10 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   background: rgba(255, 255, 255, 1);
+}
 
+.form-group {
+  margin: auto !important;
 }
 
 .form-control {
