--- a/admin/css/adminstyle.css
+++ b/admin/css/adminstyle.css
@@ -103,6 +103,11 @@ body {
   font-size: 14px !important;
 }
 
+/* add warehouse */
+.star {
+  color: red;
+}
+
 /* Responsive layout - makes a one column-layout instead of two-column layout */
 @media (max-width: 800px) {
   .flex-container {
