--- a/admin/css/adminstyle.css
+++ b/admin/css/adminstyle.css
@@ -1,10 +1,8 @@
 body {
   margin: 0 auto;
   padding: 0;
-}
-
-h2, h3 {
-  font-weight: 600;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px !important;
 }
 
 #wrapper {
